--- a/index.html
+++ b/index.html
@@ -353,51 +353,48 @@
                 <h3>Kollekvium Balları</h3>
                 <div class="colloquium-inputs">
                     <div class="form-group">
-                        <label>1-ci (0-10)</label>
+                            <label>1-ci (1-10)</label>
                         <select id="coll1" required>
-                            <option value="0">0</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8" selected>8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8" selected>8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label>2-ci (0-10)</label>
+                            <label>2-ci (1-10)</label>
                         <select id="coll2" required>
-                            <option value="0">0</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8" selected>8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8" selected>8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label>3-cü (0-10)</label>
+                            <label>3-cü (1-10)</label>
                         <select id="coll3" required>
-                            <option value="0">0</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8" selected>8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8" selected>8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
                         </select>
                     </div>
                 </div>
@@ -430,8 +427,19 @@
             <div class="form-section">
                 <h3>Sərbəst İş</h3>
                 <div class="form-group">
-                    <label>Sərbəst iş balı (0-10)</label>
-                    <input type="number" id="independentWork" min="0" max="10" step="0.1" required>
+                        <label>Sərbəst iş balı (1-10)</label>
+                        <select id="independentWork" required>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8" selected>8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                        </select>
                 </div>
             </div>
 
@@ -479,12 +487,15 @@
             const count = parseInt(this.value) || 0;
             const container = document.getElementById('seminarInputsContainer');
             container.innerHTML = '';
-            const options = Array.from({length: 11}, (_, i) => `<option value="${i}">${i}</option>`).join('');
+                const options = Array.from({length: 10}, (_, i) => {
+                    const v = i + 1;
+                    return `<option value="${v}">${v}</option>`;
+                }).join('');
             for (let i = 1; i <= count; i++) {
                 const div = document.createElement('div');
                 div.className = 'form-group';
                 div.innerHTML = `
-                    <label>${i}-ci seminar (0-10)</label>
+                        <label>${i}-ci seminar (1-10)</label>
                     <select class="seminar-input" required>${options}</select>
                 `;
                 container.appendChild(div);
@@ -516,7 +527,7 @@
             let seminarCountValid = 0;
             for (const input of seminarInputs) {
                 const num = parseInt(input.value, 10);
-                if (isNaN(num) || num < 0 || num > 10) {
+                if (isNaN(num) || num < 1 || num > 10) {
                     seminarError.style.display = 'block';
                     return;
                 }
@@ -527,7 +538,7 @@
             const seminarScore = seminarAvg * 0.4;
             
             // Sərbəst iş
-            const independentWork = parseFloat(document.getElementById('independentWork').value);
+            const independentWork = parseInt(document.getElementById('independentWork').value, 10);
             
             // Davamiyyət
             const absences = parseInt(document.getElementById('absences').value);
