Remove official BDU branding - personal project

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Bakı Dövlət Universiteti tələbələri üçün imtahana giriş balı hesablama kalkulyatoru. Kollekvium, seminar, sərbəst iş və davamiyyət ballarınızı daxil edərək yekun balınızı öyrənin.">
-  <meta name="keywords" content="BDU, Bakı Dövlət Universiteti, imtahan, giriş balı, hesablama, kalkulyator, tələbə">
+  <meta name="description" content="BDU tələbələri üçün imtahana giriş balı hesablama kalkulyatoru. Kollekvium, seminar, sərbəst iş və davamiyyət ballarınızı daxil edərək yekun balınızı öyrənin.">
+  <meta name="keywords" content="BDU, imtahan, giriş balı, hesablama, kalkulyator, tələbə">
   <meta name="author" content="BDU Calculator Team">
   <meta name="robots" content="index, follow">
   
   <!-- Open Graph / Social -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="BDU İmtahana Giriş Balı Hesablama">
-  <meta property="og:description" content="Bakı Dövlət Universiteti tələbələri üçün imtahana giriş balı hesablama sistemi.">
+  <meta property="og:description" content="BDU tələbələri üçün imtahana giriş balı hesablama sistemi.">
   <meta property="og:url" content="https://qurbaneliii.github.io/bdu-imtahana-giris-bali-hesablama/">
   
   <!-- Favicon -->
@@ -25,7 +25,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
   
-  <title>BDU İmtahana Giriş Balı Hesablama | Bakı Dövlət Universiteti</title>
+  <title>BDU İmtahana Giriş Balı Hesablama</title>
 </head>
 <body>
   <!-- Header -->
@@ -343,7 +343,7 @@
   <!-- Footer -->
   <footer class="site-footer" role="contentinfo">
     <p>
-      © 2025 Bakı Dövlət Universiteti — İmtahana Giriş Balı Hesablama Sistemi
+      © 2025 BDU İmtahana Giriş Balı Hesablama Sistemi
     </p>
     <p class="mt-sm">
       <a href="https://github.com/qurbaneliii/bdu-imtahana-giris-bali-hesablama" target="_blank" rel="noopener noreferrer">
