Update header title in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="site-header__logo">
       <span class="site-header__icon" aria-hidden="true">🎓</span>
       <div>
-        <h1 class="site-header__title">BAKI DÖVLƏT UNİVERSİTETİ</h1>
+        <h1 class="site-header__title">BDU</h1>
         <p class="site-header__subtitle">İmtahana Giriş Balı Hesablama Sistemi</p>
       </div>
     </div>
